src/main/java/com/example/please/error/UnprocessableEntityException.java
package com.example.please.error;

public class UnprocessableEntityException extends RuntimeException{
    public UnprocessableEntityException(String message) {
        super(message);
    }

}
